Ajuste para obter o cliente por id
