# src/main/java/br/com/iaquant/api/customer/user/controller/CustomerApiImpl.java
@@ -3,11 +3,8 @@ package br.com.iaquant.api.customer.user.controller;
 import br.com.iaquant.api.customer.user.config.CustomerMetrics;
 import br.com.iaquant.api.customer.user.openapi.controller.CustomerApi;
 import br.com.iaquant.api.customer.user.openapi.model.domain.*;
-import br.com.iaquant.api.customer.user.utils.Constants;
 import br.com.iaquant.api.customer.user.mapper.CustomerMapper;
 import br.com.iaquant.api.customer.user.usecase.CustomerUseCase;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Sort;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -27,13 +24,18 @@ public class CustomerApiImpl implements CustomerApi {
     }
 
     @Override
+    public ResponseEntity<CustomerResponse> getCustomerById(Long id) {
+        return ResponseEntity.ok(customerMapper.map(customerUseCase.findCustomerById(id)));
+    }
+
+    @Override
     public ResponseEntity<CustomerResponse> getCustomerByEmail(String email) {
-        return ResponseEntity.ok(customerMapper.map(customerUseCase.findByEmail(email)));
+        return ResponseEntity.ok(customerMapper.map(customerUseCase.findCustomerByEmail(email)));
     }
 
     @Override
     public ResponseEntity<CustomerResponse> getCustomerByUsername(String username) {
-        return ResponseEntity.ok(customerMapper.map(customerUseCase.findByUsername(username)));
+        return ResponseEntity.ok(customerMapper.map(customerUseCase.findCustomerByUsername(username)));
     }
 
     @Override
